2019-06-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (SetClientFilename): Reduce initialized data
	some more.

2019-06-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.c: Search for n019003l.pfb (the "Helvetica"-like
	font) rather than fonts.dir since fonts.dir is not present in all
	URW font collections.

	* NEWS.txt: Update news.

2019-06-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/logo.c: Tidy logo image definitions, and logo image
	output.

2019-05-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/mat.c: Make more data const.

2019-05-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/animate.c: Reduce initialized static allocations.

	* magick/display.c: Reduce initialized static allocations.

	* magick/widget.c (MagickSplitNDLTextToList): Add static
	implementation function.

2019-05-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/webp.c (RegisterWEBPImage): Use sprintf to format version
	since snprintf is not available in old Visual Studio.

2019-05-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dcm.c: Make more data const.

	* www/INSTALL-unix.rst: Add documentation for how to install URW
	fonts from various package management systems.

2019-05-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/authors.rst: Add authorship attribution to Samuel Thibault
	for contributing support for the Braille image format.

	* coders/braille.c: Add support for Braille image format by Samuel
	Thibault.  Patch submitted via SourceForge patch #59 "Add braille
	image format support.

2019-05-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/tempfile.c: Make more data const.

	* magick/signature.c: Make more data const.

	* magick/quantize.c: Make more data const.

	* magick/attribute.c: Make more data const.

	* coders/png.c: Make more data const.

	* coders/mpeg.c: Make more data const.

	* coders/wmf.c: Make more data const.
